tests/ui/proc-macro/raw-ident.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `S`
  --> $DIR/raw-ident.rs:15:5
   |
LL |     make_bad_struct!(S);
   |     ^^^^^^^^^^^^^^^^^^^ expected one of 8 possible tokens
   |
   = note: this error originates in the macro `make_bad_struct` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

